--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/images/
     - assets/translations/
     - assets/images/countries/
+    - assets/images/categories/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
