--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   carousel_slider: ^4.2.1
   flutter_randomcolor: ^1.0.14
-
+  provider: ^6.0.5
   fluttertoast:
 
   flutter_localizations:
