update setting_ip_enter.dart and setting_admin.dart

--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_randomcolor: ^1.0.14
   provider: ^6.0.5
+  crypto: ^3.0.1
   fluttertoast:
 
   flutter_localizations:
