--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_randomcolor: ^1.0.14
   provider: ^6.0.5
   crypto: ^3.0.1
+  connectivity_plus: ^2.3.0
   fluttertoast:
 
   flutter_localizations:
