--- a/harpia_project_v2/android/app/src/main/AndroidManifest.xml
+++ b/harpia_project_v2/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,15 @@
         android:label="harpia_project"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+<!--        <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+        <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.CAMERA" />
+        <uses-permission android:name="android.permission.BLUETOOTH" />
+        <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />-->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
