--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.0.5
   crypto: ^3.0.1
   connectivity_plus: ^2.3.0
+  permission_handler: ^10.2.0
   fluttertoast:
 
   flutter_localizations:
