--- a/ders10/pubspec.yaml
+++ b/ders10/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_pw_validator: ^1.4.2
+  lottie: ^2.6.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
