--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -45,8 +45,16 @@ dependencies:
   flutter_randomcolor: ^1.0.14
   provider: ^6.0.5
   crypto: ^3.0.1
+  smooth_page_indicator: ^1.0.0+2
+  animate_do : any
   connectivity_plus: ^2.3.0
   permission_handler: ^10.2.0
+  syncfusion_flutter_charts: ^23.1.41
+  flutter_colorpicker: ^1.0.3
+  device_info_plus: ^9.1.0
+  flutter_blue: ^0.8.0
+  flutter_pw_validator: ^1.4.2
+  lottie: ^2.6.0
   fluttertoast:
 
   flutter_localizations:
