--- a/ders10/pubspec.yaml
+++ b/ders10/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_pw_validator: ^1.4.2
   lottie: ^2.6.0
   google_fonts: ^6.1.0
+  webview_flutter: ^2.0.14
+  flutter_inappwebview: ^5.8.0
 
 dev_dependencies:
   flutter_test:
