--- a/ders10/pubspec.yaml
+++ b/ders10/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   google_fonts: ^6.1.0
   webview_flutter: ^2.0.14
   flutter_inappwebview: ^5.8.0
-
+  numberpicker: ^2.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
