--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -56,7 +56,9 @@ dependencies:
   flutter_pw_validator: ^1.4.2
   lottie: ^2.6.0
   webview_flutter: ^2.0.14
+  numberpicker: ^2.1.2
   fluttertoast:
+
 
   flutter_localizations:
     sdk: flutter
