--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -57,8 +57,8 @@ dependencies:
   lottie: ^2.6.0
   webview_flutter: ^2.0.14
   numberpicker: ^2.1.2
-  fluttertoast:
-
+  fluttertoast: ^8.2.2
+  screenshot: ^2.1.0
 
   flutter_localizations:
     sdk: flutter
