--- a/harpia_project_v2/pubspec.yaml
+++ b/harpia_project_v2/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   numberpicker: ^2.1.2
   fluttertoast: ^8.2.2
   screenshot: ^2.1.0
+  vibration: ^1.8.3
 
   flutter_localizations:
     sdk: flutter
