--- a/ders10/pubspec.yaml
+++ b/ders10/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_pw_validator: ^1.4.2
   lottie: ^2.6.0
+  fl_chart: ^0.63.0
+
   google_fonts: ^6.1.0
   webview_flutter: ^2.0.14
   flutter_inappwebview: ^5.8.0
